# notebook

./: .gitignore  BalancedMaxwells.html  Curvature.html  Gaussian.html  LinearGeometricFunctions.html  MaxwellsOperator.html  Nilpotent.html  OperatorClass.html  OperatorCoords.html  PlaneWaves.html  ProjectiveSpaceTime.html  README.md  Reflections.html  SymmetricRepresentations.html  TransmissionLines.html  WavesInStap.html  build.py  convert.py  helpers.js  home.html  index.html  operator_coords.html  plane_waves.html  pyproject.toml  style.css
.github/workflows/: convert-and-deploy.yml
content/: BalancedMaxwells.md  Curvature.md  Gaussian.md  LinearGeometricFunctions.md  Maxwells.md  MaxwellsOperator.md  Nilpotent.md  OperatorClass.md  OperatorCoords.md  PlaneWaves.md  ProjectiveSpaceTime.md  Reflections.md  SymmetricRepresentations.md  TransmissionLines.md  WavesInStap.md  fields.py  home.md  index.md  operator_coords.md  plane_waves.md  waves_with_torch.md
html/: collapse.js  helpers.js  operator_coords.html  style.css
html/static/: helpers.js  style.css
static/: helpers.js  style.css
working_content/: Reflections.md  plane_waves copy.md
